# zonosign-backend

./: .gitignore  README.md  auth_utils.py  database.py  main.py  models.py  pyproject.toml  schemas.py  seed_data.py  setttings.py
routers/: auth.py  curriculum.py  dictionary.py  progress.py  transcription.py  users.py
